--- a/_posts/2019-12-25-the-us-narrative-today.html
+++ b/_posts/2019-12-25-the-us-narrative-today.html
@@ -1759,107 +1759,107 @@ stories:
   domain: http://www.vbjusa.com/
   link: https://www.vbjusa.com/focus-sections/banking-finance/campus-credit-unions-boost-students-iq/
 images:
-- name: soldier-kneeling-26304845730-d4e495e25f-o-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-wols.jpg
-- name: statue-of-liberty-front-view-statueofliberty-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dark-dali.jpg
-- name: eduardo-eduardo-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-deep-connections.jpg
-- name: copper-circuit-bridge-over-columbia.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-bridge-over-columbia.jpg
-- name: oldhouse-granaryfield-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-wols.jpg
-- name: fence-mexico-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-rainbow-festival.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-bright-sand.jpg
-- name: curtain-curtain-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dark-dali.jpg
-- name: capital-battle-capitolbattle-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-blue-electricity.jpg
-- name: old-granary-field-oldhouse-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-hot-spicy.jpg
-- name: razorcliff-razorcliff-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-gred-mash.jpg
-- name: christianity-christianity-under-construction-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-matrix.jpg
-- name: old-house-oldhouse.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse.jpg
-- name: sand-hand-sand-hand-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-atari-missle.jpg
-- name: downtheline-downtheline-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-green-zuma.jpg
-- name: mistywoods-babyfoot-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-ww2-color.jpg
-- name: berlinwall2-berlinwall-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-aqua.jpg
-- name: store-on-corner-store-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-satan-red.jpg
-- name: sand-hand-sand-hand-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-clean-view.jpg
-- name: san-francisco-street-view-san-francisco-street-view-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-horiz-circuit.jpg
-- name: sand-hand-sand-hand-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-aqua.jpg
-- name: la-muse-eiphel-tower-paris-brown.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-eiphel-tower-paris-brown.jpg
-- name: border-crossing-bordercrossing-oily-mcoilface.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-oily-mcoilface.png
-- name: redondo-beach-harbor-redondo-beach-harbor.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor.jpg
-- name: nyc-flag-nycflag-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-sand-paper.jpg
-- name: aws-s3-stories-vancouver-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-vancouver-diego-rivera1.jpg
-- name: death-valley-death-valley-national-park-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-bright-sand.jpg
-- name: bf-skinner-castle-clouds-green-lawn.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-castle-clouds-green-lawn.jpg
-- name: walled-garden-walled-garden-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-feed-people.jpg
-- name: nazi-invasion-dandelions-in-rocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-dandelions-in-rocks.jpg
-- name: miamibeach-miamibeach-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-aqua.jpg
-- name: store-on-corner-store-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-colored-circuits.jpg
-- name: store-on-corner-store-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-plentiful.jpg
-- name: supreme-court-supremecourt-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-smoking-cigarette.jpg
-- name: statue-of-liberty-front-view-statueofliberty-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-horiz-circuit.jpg
-- name: old-cabin-oldcabin-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-light-dali.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-gan-vogh.jpg
-- name: ellis-island-ellis-island-room-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-mucha-mult.jpg
-- name: rain-princess-DSC_0076.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0076.jpg
-- name: braceros-domingo-ulloa-old-building-barcelona-waterfront.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-building-barcelona-waterfront.jpg
-- name: mediterranean-mediterranean-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-nazi-poster.jpg
-- name: oldcabin-oldcabin-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-internet-numbers.jpg
-- name: status-berlin-status-berlin-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-ww2-dresden.jpg
-- name: walled-garden-walled-garden-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-gred-mash.jpg
-- name: rockingchair-rockingchair-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-gan-vogh.jpg
-- name: bf-skinner-old-church-in-field.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-church-in-field.jpg
-- name: white-house-lawn-white-house-window-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-yellow-collage.jpg
-- name: oldhousecars-house-old-cars-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-smoking-cigarette.jpg
-- name: amusement-park-amusement-park-2-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-smooth-ride.jpg
-- name: oldroad-old-road-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-emily-carr.jpg
-- name: supreme-court-supremecourt-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-yellow-collage.jpg
+- name: downtheline-downtheline-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-colorful-blocks.jpg
+- name: blossombar-far-away-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-far-away-file-00-00-24-99.jpg
+- name: stories-machine-road-blue-circuit-5-bw.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-machine-road-blue-circuit-5-bw.jpg
+- name: store-on-corner-store-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-colorful-dream.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-marcel-duchamp.jpg
+- name: window-window-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-blue-electricity.jpg
+- name: server-cloud-server-racks-clouds-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-cinnamon-rolls.jpg
+- name: sand-hand-sand-hand-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-copper-circuit-2.jpg
+- name: meadowbutterfly-meadow-butterfly-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-hot-spicy.jpg
+- name: old-door-lock-old-door-lock-2-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-hot-spicy.jpg
+- name: berlinwall2-berlinwall-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-nazi-poster.jpg
+- name: white-house-lawn-white-house-window-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-rainbow-festival.jpg
+- name: oldroad-old-road-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-blue-brush.jpg
+- name: white-house-lawn-white-house-lawn-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-emily-carr.jpg
+- name: stalin-time-dragon-turning-head.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-dragon-turning-head.jpg
+- name: oldhouse-oldhouse-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-mucha-mult.jpg
+- name: status-berlin-status-berlin-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-granite.jpg
+- name: flower-barbed-wire-flower-barbed-wire-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-yellow-paper.jpg
+- name: flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-purple-pond.jpg
+- name: hollywood-building-hollywood-building-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-satan-red.jpg
+- name: oldcabin-oldcabin-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-oily-mcoilface.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-feed-people.jpg
+- name: hollywood-building-hollywood-building-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-free-woman.jpg
+- name: castle-wall-DSC-0067-yellow-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-yellow-paper.JPG
+- name: stories-new-27-127-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-27-127-800-500-0-max-0--5--1.jpg
+- name: stalin-time-shipping-container-ship-sunny-day.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-shipping-container-ship-sunny-day.jpg
+- name: old-door-lock-old-door-lock-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-atari-missle.jpg
+- name: berlinwall-DSC-0084-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-hot-spicy.jpg
+- name: walled-garden-walled-garden-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-purple-storm.jpg
+- name: white-house-whitehouse-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-kand-two.jpg
+- name: birdhouse-birdhouse-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-dali-three.jpg
+- name: stalin-time-old-time-cash-register.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-time-cash-register.jpg
+- name: border-crossing-bordercrossing-purp-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-purp-paper.png
+- name: old-school-house-old-schoolhouse-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-horiz-circuit.jpg
+- name: subway-subway-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-clean-view.jpg
+- name: amusement-park-amusement-park-2-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-diego-rivera1.jpg
+- name: rain-princess-IMG_7162.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7162.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-rainbow-festival.jpg
+- name: docks-docks-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-blue-granite.jpg
+- name: old-school-house-old-schoolhouse-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-plentiful.jpg
+- name: oldcabin-store-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-ww2-dresden.jpg
+- name: fence-mexico-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-creativity.jpg
+- name: bf-skinner-small-lighthouse_36556509232_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-small-lighthouse_36556509232_o.jpg
+- name: old-granary-field-oldhouse-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-neo-instinct.jpg
+- name: copper-circuit-statue-architecture-holding.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-architecture-holding.jpg
+- name: mediterranean-mediterranean-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-dry-skin.jpg
+- name: art-museum-art-museum-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-bright-sand.jpg
+- name: lincoln-memorial-lincolnmemorial-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-dark-soul.jpg
+- name: white-house-whitehouse-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-constitution.jpg
+- name: capital-battle-capitolbattle-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dark-dali.jpg
 ---
 Exterminator Declares War On Bedbugs.&nbsp;Simple Mulled Wine Recipe Adds Holiday Cheer.&nbsp;Airport Asks Travelers To Arrive Early.&nbsp;Pitt And Eastern Michigan Aim To End Bowl Skids In Detroit.&nbsp;Lady Trojans Cross Country Team Runs To Programs 15th State Championship.&nbsp;Prince Andrew Joins Royals For Christmas Day Service.&nbsp;Council To Meet In Closed Session Friday.&nbsp;Colorados First Steak n Shake Restaurant Is Permanently Closed?.&nbsp;
